--- a/Ratio/Base.lproj/Main.storyboard
+++ b/Ratio/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UXP-J7-KKB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UXP-J7-KKB">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -12,29 +12,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.73930027170000001" green="0.1727963686" blue="0.041206473219999998" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9hp-Go-5Pa">
-                            <size key="itemSize" width="75" height="95"/>
+                            <size key="itemSize" width="90" height="130"/>
                             <size key="headerReferenceSize" width="320" height="40"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RatioList" id="jkB-nR-mXw" customClass="RTORatioCVC">
-                                <rect key="frame" x="10" y="114" width="75" height="95"/>
+                                <rect key="frame" x="10" y="114" width="90" height="130"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="75" height="95"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="130"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8SP-Ig-ZA0" customClass="RTORatioPieView">
-                                            <rect key="frame" x="0.0" y="0.0" width="75" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="105"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                         </view>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FMm-VE-ubT">
-                                            <rect key="frame" x="0.0" y="75" width="75" height="20"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="90" translatesAutoresizingMaskIntoConstraints="NO" id="FMm-VE-ubT">
+                                            <rect key="frame" x="0.0" y="90" width="90" height="40"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -43,7 +44,6 @@
                                 <connections>
                                     <outlet property="ratioPieView" destination="8SP-Ig-ZA0" id="7h6-SR-QAb"/>
                                     <outlet property="ratioTitle" destination="FMm-VE-ubT" id="JhY-78-gek"/>
-                                    <segue destination="xLx-6g-Omk" kind="push" identifier="ShowRatio" id="fdG-EA-Lg4"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -71,12 +71,12 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxJ-d7-OXH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="961" y="-149"/>
+            <point key="canvasLocation" x="880" y="-149"/>
         </scene>
         <!--RatioVC-->
         <scene sceneID="kxa-qR-NaA">
             <objects>
-                <viewController id="xLx-6g-Omk" customClass="RTORatioVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RatioDisplay" id="xLx-6g-Omk" customClass="RTORatioVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="PpN-70-AGe"/>
                         <viewControllerLayoutGuide type="bottom" id="ZuF-QY-DCA"/>
@@ -164,6 +164,7 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.73930027170000001" green="0.1727963686" blue="0.041206473219999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="3v7-R9-gcC" firstAttribute="leading" secondItem="Wpn-WR-5pW" secondAttribute="leading" id="Hng-kY-I9o"/>
                             <constraint firstItem="3v7-R9-gcC" firstAttribute="centerX" secondItem="9Ct-bm-e1W" secondAttribute="centerX" id="J9a-Ua-Rgc"/>
@@ -190,6 +191,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="x9l-se-GdL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.73930027170000001" green="0.1727963686" blue="0.041206473219999998" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
