--- a/Ratio/Base.lproj/Main.storyboard
+++ b/Ratio/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UXP-J7-KKB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UXP-J7-KKB">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -77,26 +77,36 @@
             </objects>
             <point key="canvasLocation" x="-254" y="-587"/>
         </scene>
-        <!--CalculateVC-->
-        <scene sceneID="hgS-Nr-mmF">
+        <!--RatioVC-->
+        <scene sceneID="kxa-qR-NaA">
             <objects>
-                <viewController id="iek-TD-3Yf" customClass="RTOCalculateVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RatioDisplay" id="xLx-6g-Omk" customClass="RTORatioVC" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="4s5-qo-qDG"/>
-                        <viewControllerLayoutGuide type="bottom" id="ejt-hI-dKD"/>
+                        <viewControllerLayoutGuide type="top" id="DaT-gQ-mbZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="XKV-Of-vfi"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="lpL-qb-eeF">
+                    <view key="view" contentMode="scaleToFill" id="Wpn-WR-5pW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jok-1f-FHi">
+                                <rect key="frame" x="10" y="64" width="300" height="484"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <inset key="scrollIndicatorInsets" minX="0.0" minY="64" maxX="0.0" maxY="0.0"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                            </textView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="4OC-Te-VhV">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="108" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="calcHeading" id="PkO-t0-5r0">
-                                        <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="55" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PkO-t0-5r0" id="64O-fY-IHf">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -125,7 +135,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="calcRow" id="JiQ-Z1-TU2" customClass="RTOCacluationCell">
-                                        <rect key="frame" x="0.0" y="163" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JiQ-Z1-TU2" id="gXr-sS-9vQ">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -161,73 +171,23 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="iek-TD-3Yf" id="QBQ-NT-36b"/>
-                                    <outlet property="delegate" destination="iek-TD-3Yf" id="fTp-Jg-2qC"/>
+                                    <outlet property="dataSource" destination="xLx-6g-Omk" id="fW1-A6-zVB"/>
+                                    <outlet property="delegate" destination="xLx-6g-Omk" id="u5g-5A-1QU"/>
                                 </connections>
                             </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TW5-JA-zFo">
-                                <rect key="frame" x="0.0" y="64" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items>
-                                    <barButtonItem systemItem="flexibleSpace" id="l4u-hr-FDe"/>
-                                    <barButtonItem style="plain" id="Ede-do-61w">
-                                        <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" id="hNc-Mv-WwZ">
-                                            <rect key="frame" x="50" y="7" width="220" height="31"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <segments>
-                                                <segment title="Ratio"/>
-                                                <segment title="Calculator"/>
-                                                <segment title="Details"/>
-                                            </segments>
-                                            <color key="tintColor" red="0.73930027170000001" green="0.1727963686" blue="0.041206473219999998" alpha="1" colorSpace="calibratedRGB"/>
-                                            <connections>
-                                                <action selector="changeRatioView" destination="xLx-6g-Omk" eventType="valueChanged" id="g17-UB-RRG"/>
-                                                <action selector="changeView" destination="iek-TD-3Yf" eventType="valueChanged" id="QNp-Uw-u64"/>
-                                            </connections>
-                                        </segmentedControl>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="rFd-xW-xe9"/>
-                                </items>
-                            </toolbar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <color key="tintColor" red="0.73930027170000001" green="0.1727963686" blue="0.041206473219999998" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="jel-zF-FIf"/>
-                    <connections>
-                        <outlet property="calculateTableView" destination="4OC-Te-VhV" id="oTw-mA-Gc1"/>
-                        <outlet property="viewSelectSegmentedControl" destination="hNc-Mv-WwZ" id="QTj-PG-Iwc"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dWm-hB-HBt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="697" y="-587"/>
-        </scene>
-        <!--RatioVC-->
-        <scene sceneID="kxa-qR-NaA">
-            <objects>
-                <viewController storyboardIdentifier="RatioDisplay" id="xLx-6g-Omk" customClass="RTORatioVC" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="DaT-gQ-mbZ"/>
-                        <viewControllerLayoutGuide type="bottom" id="XKV-Of-vfi"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Wpn-WR-5pW">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3v7-R9-gcC">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3h6-oE-F7B">
                                     <size key="itemSize" width="320" height="210"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="64" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="88" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Ratio" id="H6x-ey-VGD" customClass="RTORatioCVC">
-                                        <rect key="frame" x="0.0" y="128" width="320" height="220"/>
+                                        <rect key="frame" x="0.0" y="88" width="320" height="220"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
@@ -247,7 +207,7 @@
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="List" id="FCX-XK-1sV" customClass="RTOListCVC">
-                                        <rect key="frame" x="0.0" y="358" width="320" height="30"/>
+                                        <rect key="frame" x="0.0" y="318" width="320" height="30"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
@@ -312,9 +272,10 @@
                         <nil key="title"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="calculateTableView" destination="4OC-Te-VhV" id="l4Y-55-cMd"/>
+                        <outlet property="instructionsTextView" destination="Jok-1f-FHi" id="COZ-yD-ndZ"/>
                         <outlet property="ratioCollectionView" destination="3v7-R9-gcC" id="pdc-xa-OHh"/>
                         <outlet property="viewSelectSegmentedControl" destination="9Ct-bm-e1W" id="LDA-40-9WB"/>
-                        <segue destination="iek-TD-3Yf" kind="push" identifier="showCalculator" id="pD7-a1-lCg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2ia-GV-Dd8" userLabel="First Responder" sceneMemberID="firstResponder"/>
